Changelog
=========

1.7-dev0 - (unreleased)
---------------------------

1.6 - (2021-11-22)
---------------------------
* Change: Drop includeDependencies="." in order to work with pip based installation
  [avoinea refs #139557]

1.5 - (2021-11-11)
---------------------------
* Change: Removed z3c.jbot as dependency
  [iulianpetchesi refs #139888]

1.4 - (2021-11-11)
---------------------------
* Change: New release
  [avoinea refs #139888]

1.3 - (2021-11-11)
---------------------------
* Change: Removed plone.volto conflicts
  [iulianpetchesi refs #139888]

1.2 - (2021-01-14)
---------------------------
* Change: updated Jenkinsfile and setup.py
  [alecghica refs #121942]

1.1 - (2020-12-16)
---------------------------
* Change: fixed history.txt
  [Petchesi-Iulian refs #121942]

1.0 - (2020-12-08)
-----------------------
* Initial release: Added behaviors/controlpanel/patches/vocabulary from kitconcept.volto
  [Petchesi-Iulian refs #121942]