@@ -1,6 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_types" meta_type="Plone Types Tool">
-  <object name="Plone Site"
-    meta_type="Factory-based Type Information with dynamic views"/>
-  <object meta_type="Dexterity FTI" name="Document" />
-</object>
